# 3DFirmament

./: 3DFirmament.sln  README.md
3DFirmanent/: 3DFirmament.sln  3DFirmament.vcxproj  3DFirmament.vcxproj.filters  3DFirmanent.vcxproj  3DFirmanent.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  imgui.ini  vcpkg.json
3DFirmanent/Dependencies/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
3DFirmanent/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  LightingMenu.cpp  LightingMenu.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RawVertices.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  UIManager.cpp  UIManager.h  main.cpp
3DFirmanent/src/Effects/: Effect.h
3DFirmanent/src/Entity/: Entity.h
3DFirmanent/src/ImGuisource/: imgui_impl_glfw.cpp
3DFirmanent/src/shader/: Fragment.shader  Skybox.shader  SkyboxVS.shader  Vertex.shader
